Views: Add to desktop dialog is now modal.

Previously, it allowed interaction with the page underneath, and
DCHECK-failed upon opening.

BUG=605008

Review URL: https://codereview.chromium.org/1906433002

Cr-Commit-Position: refs/heads/master@{#388636}

Former-commit-id: e628940221550b9b7c81440c5fd65f852fbb174b